--- a/assets/estilo.css
+++ b/assets/estilo.css
@@ -12,4 +12,8 @@
 footer{
     background-color: aquamarine;
     color: blue;
+    width: 100%;
+    height: 2rem;
+    position: fixed;
+    bottom: 0;
 }
