--- a/assets/estilo.css
+++ b/assets/estilo.css
@@ -10,8 +10,8 @@
 }
 
 footer{
-    background-color: aquamarine;
-    color: blue;
+    background-color: deeppink;
+    color: white;
     width: 100%;
     height: 2rem;
     position: fixed;
