--- a/assets/estilo.css
+++ b/assets/estilo.css
@@ -4,6 +4,7 @@
 
 .cartao{
     background-color: deeppink;
+    color: white;
     margin: 1rem 1rem;
     flex-grow: 1;
     flex-basis: calc(50%-6rem);
