--- a/assets/estilo.css
+++ b/assets/estilo.css
@@ -1,5 +1,6 @@
 .conteudo{
     display: flex;
+    flex-wrap: wrap;
 }
 
 .cartao{
@@ -9,6 +10,19 @@
     flex-grow: 1;
     flex-basis: calc(50%-6rem);
     border-radius: 10px;
+}
+
+.body{
+    background-image: url("/");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.cartao p {
+     font-size: 40px;
+    margin-top: 1rem;
+    padding: 2rem;
+
 }
 .cartao main{
     text-align: center;
@@ -23,5 +37,24 @@ footer{
     bottom: 0;
     text-align: center;
     align-content: center;
-    
+    font-size: 16px;
 }
+.cartao--conteudo{
+    background-color: black;
+    transform-style: preserve-3d;
+    transition: transform 300ms ease-in-out;
+}
+
+.cartao:hover .cartao--conteudo{
+    background-color: blue;
+    transform: rotateY(180deg);
+}
+
+.cartao--pergunta,.cartao--resposta{
+     backface-visibility: hidden;
+}
+.cartao--resposta {
+    transform: rotateY('180deg');
+}
+
+
