--- a/assets/estilo.css
+++ b/assets/estilo.css
@@ -1,60 +1,60 @@
-.conteudo{
+{
+    margin: 0; 
+    padding: 0;
+}
+
+body{
+    background-color:rgb(231, 125, 143);
+    background-size: cover;
+}
+#conteudo{
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 3rem; 
 }
-
 .cartao{
-    background-color: deeppink;
-    color: white;
-    margin: 1rem 1rem;
-    flex-grow: 1;
-    flex-basis: calc(50%-6rem);
-    border-radius: 10px;
-}
 
-.body{
-    background-image: url("/");
-    background-repeat: no-repeat;
-    background-size: contain;
-}
 
-.cartao p {
-     font-size: 40px;
-    margin-top: 1rem;
-    padding: 2rem;
-
-}
-.cartao main{
+    margin: 1rem 1rem; 
+    width: 412px;
+    flex-basis: calc(50% - 6rem);
     text-align: center;
 }
 
+.cartao--conteudo {
+
+    background-color: rgb(255, 207, 215);
+    transform-style: preserve-3d;
+    transition: transform 300ms ease-in-out;
+}
+
+.cartao.active .cartao--conteudo{
+    background-color: aliceblue;
+    transform: rotateY(180deg);
+}
+
+.cartao--pergunta, .cartao--resposta{
+
+backface-visiblity: hidden; 
+
+}
+
+.cartao p{
+    font-size: 22px;
+    margin-top: 1rem;
+    padding: 2rem;
+}
+
 footer{
-    background-color: deeppink;
-    color: white;
+
+    background-color: palevioletred;
+    color: aliceblue;
     width: 100%;
     height: 2rem;
     position: fixed;
     bottom: 0;
     text-align: center;
     align-content: center;
-    font-size: 16px;
-}
-.cartao--conteudo{
-    background-color: black;
-    transform-style: preserve-3d;
-    transition: transform 300ms ease-in-out;
-}
 
-.cartao:hover .cartao--conteudo{
-    background-color: blue;
-    transform: rotateY(180deg);
 }
-
-.cartao--pergunta,.cartao--resposta{
-     backface-visibility: hidden;
-}
-.cartao--resposta {
-    transform: rotateY('180deg');
-}
-
-
